Ajuste en archivos de configuración

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -22,5 +22,13 @@
   "Notification": {
     "To": "leandrobaena@gmail.com"
   },
-  "UrlWeb": "https://localhost:30101/change-password/"
+  "UrlWeb": "https://localhost:30101/change-password/",
+  "Smtp": {
+    "Username": "soporte.sistemas@inglesefe.com",
+    "Password": "",
+    "Host": "mail.inglesefe.com",
+    "Port": 465,
+    "Ssl": true,
+    "From": "soporte.sistemas@inglesefe.com"
+  }
 }
